src/grid/grid.scss
@import "../config/colors.scss";
@import "../config/font.scss";

/*--------------------------------------------------
   |					      	G R I D 							     |
   --------------------------------------------------
*/

.grid {
	*display: block;
	display: -webkit-flex;
	-webkit-flex-flow: row wrap;
	display: -ms-flexbox;
	-ms-flex-flow: row wrap;
	display: flex;

	[class *= "grid-unit"] {
		display: inline-block;
		*display: inline;
		vertical-align: top;
		box-sizing: border-box;
		padding-left: 0.625em;
		letter-spacing: normal;
		word-spacing: normal;
		text-rendering: auto;
		zoom: 1;

		&:last-child {
			padding-right: 0.625em;
		}
	}

	.grid-unit-1 {
		width: 100%;
	}

	@for $i from 1 through 1 {
		.grid-unit-#{$i}-2 {
			width: #{(100%/2) * $i};
		}
	}

	@for $i from 1 through 2 {
		.grid-unit-#{$i}-3 {
			width: #{(100%/3) * $i};
		}
	}

	@for $i from 1 through 3 {
		.grid-unit-#{$i}-4 {
			width: #{(100%/4) * $i};
		}
	}

	@for $i from 1 through 4 {
		.grid-unit-#{$i}-5 {
			width: #{(100%/5) * $i};
		}
	}

	@for $i from 1 through 5 {
		.grid-unit-#{$i}-6 {
			width: #{(100%/6) * $i};
		}
	}

	@for $i from 1 through 6 {
		.grid-unit-#{$i}-7 {
			width: #{(100%/7) * $i};
		}
	}

	@for $i from 1 through 7 {
		.grid-unit-#{$i}-8 {
			width: #{(100%/8) * $i};
		}
	}

	@for $i from 1 through 11 {
		.grid-unit-#{$i}-12 {
			width: #{(100%/12) * $i};
		}
	}

	@for $i from 1 through 23 {
		.grid-unit-#{$i}-24 {
			width: #{(100%/24) * $i};
		}
	}
}

